--- a/inter.html
+++ b/inter.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="hi.css">
 </head>
+
 <body>
-    123321123321123
+    <h1 id="b">Hi</h1>
+    <h2 class="b13">addad</h2>
+    <p class="PP">ASASAA早安</p>
+    <div class="box"></div>
+    <div>oooooooo</div>
 </body>
+
 </html>
